# interview-ops-engine

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: history.example.jsonl  offers.example.json  profile.example.json  sources.example.json
src/interview_ops/: __init__.py  cli.py  collector.py  engine.py  models.py  privacy.py
tests/: test_cli.py  test_collector.py  test_engine.py  test_privacy.py
