[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-ops-engine"
version = "0.1.0"
description = "Deterministic, privacy-first job application qualification and deduplication engine."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AtlasNexusTech"}]
keywords = ["job-search", "career", "automation", "recruiting", "privacy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
interview-ops = "interview_ops.cli:entrypoint"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/interview_ops"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
